# lab-working-with-local-workflows-and-shared-libs

./: .editorconfig  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
libs/library1/: main.py  pyproject.toml  setup.py
libs/library1/tests/: test_lib1_main.py
libs/library2/: main.py  pyproject.toml  setup.py
libs/library2/tests/: test_lib2_main.py
myapp/src/: __main__.py
myapp/tests/: test_main.py
